--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     </title>
 </head>
 <body>
-    <img src="pic.jpg" alt="some pic" height="700px">
+    <img src="pic.jpg" alt="some pic" width="50%">
 </body>
 </html>
