--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     </title>
 </head>
 <body>
-    <img src="pic.jpg" alt="some pic" width="50%">
+    <h1 style="color: blue; text-align: center;">Welcome to My Web Page!</h1>
+    <p>Hello, World!</p>
+    <p>This is another Paragraph!</p>
 </body>
 </html>
