--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lecture 0 | Git, HTML
     </title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 style="color: blue; text-align: center;">Welcome to My Web Page!</h1>
-    <p>Hello, World!</p>
-    <p>This is another Paragraph!</p>
+    <h1>Welcome to My Web Page!</h1>
+    <h1>Here is another Headline!</h1>
+    <p>This is another paragraph!</p>    
 </body>
 </html>
