--- a/index.html
+++ b/index.html
@@ -5,8 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lecture 0 | Git, HTML
     </title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <img src="pic.jpg" alt="some pic" width="50%">
+    <h1>Presidents</h1>
+    <table>
+        <tr>
+            <th>First Name</th>
+            <th>Last Name</th>
+            <th>Period of Presidency</th>
+        </tr>
+        <tr>
+            <td>George</td>
+            <td>Washington</td>
+            <td>Founding Fathers</td>
+        </tr>
+        <tr>
+            <td>John</td>
+            <td>Adams</td>
+            <td>Executive Power</td>
+        </tr>
+        <tr>
+            <td>Franklin D.</td>
+            <td>Roosevelt</td>
+            <td>Great Depression</td>
+        </tr>
+    </table>
 </body>
 </html>
