--- a/index.html
+++ b/index.html
@@ -8,28 +8,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Presidents</h1>
-    <table>
-        <tr>
-            <th>First Name</th>
-            <th>Last Name</th>
-            <th>Period of Presidency</th>
-        </tr>
-        <tr>
-            <td>George</td>
-            <td>Washington</td>
-            <td>Founding Fathers</td>
-        </tr>
-        <tr>
-            <td>John</td>
-            <td>Adams</td>
-            <td>Executive Power</td>
-        </tr>
-        <tr>
-            <td>Franklin D.</td>
-            <td>Roosevelt</td>
-            <td>Great Depression</td>
-        </tr>
-    </table>
+    <div id="top">
+        This is the <span class="name">top</span> of my web page.
+    </div>
+    <div id="middle">
+        This is the <span class="name">middle</span> of my web page.
+    </div>
+    <div id="bottom">
+        This is the <span class="name">bottom</span> of my web page.
+    </div>
 </body>
 </html>
